examples/test/testpolicy3870.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3870
  namespace: namespace412
spec:
  podSelector:
    matchLabels:
      key37: value26
      key3: value49
      key31: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value38
      podSelector:
        matchLabels:
          key23: value42
          key3: value20
